--- a/zillow.ipynb
+++ b/zillow.ipynb
@@ -3291,6 +3291,7 @@
     }
    ],
    "source": [
+    "# let's take a look at model performance in comparison to the regression line\n",
     "plt.figure(figsize=(16,9))\n",
     "sns.lmplot(x='glm2', y='tax_value', data=y_train, line_kws={'color': 'red'}, size=15)\n",
     "plt.show()"
@@ -3344,6 +3345,7 @@
     }
    ],
    "source": [
+    "# it's time to test my model on the unseen test data set\n",
     "y_test = pd.DataFrame(y_test)\n",
     "\n",
     "# fit model only to train df\n",
